theme7/theme7.css
/* ... */
/* Blockquotes */
blockquote {
	border-left: 0.1875rem solid rgba(var(--accent--rgb), 0.2);
	padding: 0.625em var(--spacing);
	margin: 0.625rem 0;
}
blockquote > :first-child { margin-top: 0 }
blockquote > :last-child { margin-bottom: 0 }
/* Lists */
li::marker { font-family: "Favorit", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif }
/* Accessibility */
#skip, #hiddentitle, #featured > h2, #notes h2 {
	position: fixed;
	font-size: 1px;
	top: -100rem;
}
/* Content/sidebar layout */
body {
	display: grid;
	column-gap: 1.25em;
	justify-content: center;
	align-items: start;
	padding: 1.25em;
}
/* Tooltips */
#s-m-t-tooltip {
	z-index: 10!important;
	margin: 1em;
	padding: 0.5em;
	border-radius: var(--half-roundness);
	background: var(--bg);
	box-shadow: inset 0 0 0 2px rgba(var(--accent--rgb), 0.15);
	color: var(--text);
	font-size: 0.9rem;
}
/* Scroll to top */
#scrolltotop_parent, #showright {
	position: fixed;
	z-index: 1;
	bottom: 0.5em;
	left: calc(100vw - 3.75em);
	display: flex;
	align-items: center;
	justify-content: center;
	width: 2.75em;
	height: 2.75em;
	background-color: rgba(var(--bg--rgb), 0.75);
	color: var(--text);
	border-radius: 100%;
	border: 0.125em solid rgba(var(--text--rgb), 0.4);
	cursor: pointer;
}
#scrolltotop_arrow {
	width: 1.0625em;
	height: 1.0625em;
}
#scrolltotop_parent:hover, #showright:hover {
	background-color: var(--bg);
	border-color: var(--text);
}
#showright { transform: rotate(45deg) }



/***************************** MAIN CONTENT SECTION *****************************/
#center {
	background-color: var(--bg);
	width: 100%;
	max-width: var(--post-width);
	border-radius: var(--roundness);
}
#headerimg img {
	border-radius: var(--roundness) var(--roundness) 0 0;
	height: 15em;
	width: 100%;
	object-fit: contain;
}
#headerimg.cover img { object-fit: cover }
#main, #pagination, #notes { margin: 0 1.25em 1.25em }
.post {
	border: 0.0625rem solid rgba(var(--accent--rgb), 0.25);
	border-radius: var(--half-roundness);
	margin-bottom: 1.25rem;
	--spacing: 1.25rem;
	--unspacing: -1.25rem;
	--vspacing: 1rem;
}
/* Post headers */
.post header {
	padding: var(--spacing) var(--spacing) 0;
	margin-bottom: var(--vspacing);
	font-size: 0.875rem;
	display: grid;
	grid-template-columns: auto auto;
	align-items: center;
	column-gap: 1rem;
	position: relative;
}
.post header a { color: var(--text) }
.viasource {
	display: grid;
	align-items: center;
	grid-template-columns: auto auto auto;
	column-gap: 0.25rem;
	width: fit-content;
}
.viasource a {
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
	font-weight: 700;
}
.post header .date {
	justify-self: end;
	text-align: right;
}
.cornerlink {
	position: absolute;
	top: -0.0625em;
	right: -0.0625em;
	border: 0em solid var(--bg);
	border-bottom-left-radius: var(--half-roundness);
	transition: border ease .15s;
}
.post header:hover .cornerlink {
	border-width: 0.5em;
	border-color: var(--bg) var(--bg) var(--accent) var(--accent);
}
/* Post body */
.bodyitem {
	border-top: 0.0625em solid rgba(var(--accent--rgb), 0.25);
	padding-top: var(--vspacing);
}
.bodyitemcontent, .user, .body > .title { padding: 0 var(--spacing) }
.bodyitemcontent > *, .body > .title {
	margin-top: 1rem;
	margin-bottom: 1rem;
}
/* Usernames */
.user {
	display: flex;
	align-items: center;
	font-weight: 700;
}
.usericon {
	--size: 1.5625em;
	height: var(--size);
	width: var(--size);
	border-radius: var(--half-roundness);
}
.username { margin-left: 0.625em }
/* Headings */
.body > .title, .bodyitemcontent h1, .bodyitemcontent h2 { font-weight: normal }
.body > .title, .bodyitemcontent h1 {
	font-size: 1.625rem;
	line-height: 1.3077;
}
.bodyitemcontent h2 {
	font-size: 1.25rem;
	line-height: 1.625rem;
}
/* Read more links */
.read_more {
	display: block;
	text-align: center;
	font-weight: 700;
	padding: 0.375rem 0.625rem;
}
/* Post footers */
.post footer { margin-top: 0.75rem }
.pintags, .notecount {
	padding: 0 var(--spacing);
	margin: 0.75em 0 0;
}
.source, .sublabel { margin: 0.625em var(--spacing) }
.source + footer, .sublabel + footer { margin-top: 0 }
.source a, .sublabel a, .tags a { color: var(--text) }
.source, .sublabel, .tags a:not(:hover), .notecount { opacity: 0.8 }
.sublabel a { font-weight: 700 }
#pinnedpost {
	display: inline-flex;
	align-items: baseline;
	color: var(--accent);
}
#pinnedpost, .tags:first-child a:first-child { margin-left: -0.375rem }
#pinnedpost, .notecount { font-weight: 700 }
#pinnedpost svg { margin-right: 0.375em }
#pinnedpost, .tags a { padding: 0.125em 0.375em }
.tags a::before{ content: "#" }
.notecount { display: block }
.post .buttons {
	display: flex;
	margin: 1em var(--spacing) 0;
	border-top: 0.0625em solid rgba(var(--accent--rgb), 0.25);
}
.post .buttons a {
	flex-grow: 1;
	display: flex;
	align-items: center;
	justify-content: center;
	padding: 0.75rem var(--spacing);
}
.customlike { position: relative }
.customlike iframe {
	position: absolute;
	left: 0;
	top: 0;
	right: 0;
	bottom: 0;
	width: 100%;
	height: 100%;
	opacity: 0;
}
.pintags:empty, .buttons:empty,
.customlike .like_button:not(.liked) ~ .liked,
.customlike .like_button.liked ~ .unliked { display: none }
.showtags { cursor: pointer }
.showtags.active { color: var(--text) }
/* Pagination */
#pagination {
	display: grid;
	grid-template-columns: 1fr auto 1fr;
	align-items: center;
}
#curr {
	grid-column: 2;
	justify-self: center;
	border-radius: var(--roundness);
	padding: 0 1em;
}
#next { grid-column: 3; justify-self: end }
#pagination a, #curr {
	border: 0.125em solid rgba(var(--accent--rgb), 0.1);
	display: flex;
	align-items: center;
	justify-content: center;
	height: 2.5em;
}
#pagination a {
	border-radius: 100%;
	width: 2.5em;
}
/* Notes section */
.notes {
	list-style: none;
	padding: 0.5em 0;
	margin: 0;
}
.notes li {
	margin: 0.75em 1em;
	display: grid;
	grid-template-columns: 2em 1fr;
	column-gap: 1em;
	align-items: center;
}
.avatar { border-radius: var(--half-roundness) }
/* ... */

